<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/price" />

    <EditText
        android:id="@+id/editTextUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/units" />

    <ImageButton
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_product"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <ImageButton
        android:id="@+id/btnUndoDelete"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:contentDescription="@string/undo_last_deleted"
        android:src="@android:drawable/ic_menu_revert" />

    <ListView
        android:id="@+id/listViewProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1dp"
        android:divider="@android:color/darker_gray" />
</LinearLayout>
